# ProjetJDMGenitive

./: .gitignore  README.md  corpus.json  main.py  mainV2.py  pyproject.toml
cache/: node_cache.pkl
code_base_brouillon/: graph_v2.py  jdm_client_v2.py  rule_engine_v2.py
data/: cache.py  regles.py  test_compounds.txt  vocabulary.json
data/corpus_json/: r_depict.json  r_has_causatif.json  r_has_property-1.json  r_holo.json  r_lieu.json  r_lieu_origine.json  r_objet_matiere.json  r_own.json  r_processus_agent.json  r_processus_instru.json  r_processus_patient.json  r_product_of.json  r_quantificateur.json  r_social_tie.json  r_topic.json
data/jdm/: jdm_positive_relations.json
jdm/: api.py  cache.py  signature.py
model/: corpus.py  evaluate.py  predict.py  similarity.py  train.py
src/: cli.py  explain.py  features.py  graph.py  jdm.py  jdm_client.py  jdm_fetch.py  models.py  parse_corpus.py  parsing.py  preprocessor.py  prototypes.py  rule_engine.py  rule_enginev2.py  train.py  visualizer.py
src/ProjetJDMGenitive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
